--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -4,7 +4,7 @@
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton
-corner-radius = 12;
+corner-radius = 10;
 rounded-corners-exclude = [
   #"window_type = 'toolbar'",
   #"class_g = 'eww-bar'",
@@ -205,10 +205,11 @@ opacity-rule = [
    "100:name     = 'Dunst'",             # lemonbar
   "10:class_g    = 'eww-blur_full'",            # maim
   #"100:class_g    = 'XTerm'",
-  #"100:class_g    = 'URxvt'",
-  "80:class_g    = 'kitty'",
+  "100:class_g    = 'Rofi'",
+  "100:class_g    = 'kitty'",
   #"60:class_g    = 'eww-player'",
-  "100:class_g    = 'Tint2'"
+  "100:class_g    = 'Tint2'",
+  "80:class_g     =  'Polybar'"
   #"80:class_g     = 'Polybar'",
   #"100:class_g    = 'code-oss'",
   #"100:class_g    = 'Meld'",
@@ -257,7 +258,7 @@ blur: {
   # requires: https://github.com/ibhagwan/picom
   method = "dual_kawase";
   #method = "kernel";
-  strength = 6;
+  strength = 8;
   deviation = 1.0;
   # kernel = "11x11gaussian";
   background = false;
@@ -291,14 +292,14 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-experimental-backends = false;
+experimental-backends = true;
 backend = "glx";
 #backend = "xrender";
 
 
 # Enable/disable VSync.
 # vsync = false
-vsync = false;
+vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
@@ -509,4 +510,3 @@ wintypes:
   toolbar = { full-shadow = true; };
   notification = { opacity = 1; }
 };
-
