--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,94 +1,63 @@
+
+
 [colors]
-bg = #10
-bg-alt = #20212C
-fg = #acb0d0
-fg-alt = #5D5E72
+bg = #77080808
+fg = #b2b2b2
 
-red = #ff7a93
+[bar/bottom]
+width = 15%
+offset-x = 43%
+offset-y = 16
+height = 32
+radius = 8
 
-trans = #00000000
-semi-trans-black = #cc000000
-
-shade-1 = #32344a
-shade-2 = #444b6a
-shade-3 = #787c99
-shade-4 = #CACACE
-shade-5 = #acb0d0
-
-[bar/main]
-width = 100%
-height = 30
-offset-y = 0
-top = true
-fixed-center = true
-
-wm-restack = bspwm
-
-override-redirect = false
-
-scroll-up = next
-scroll-down = prev
-
-enable-ipc = true
-
-background = ${colors.bg}
+bottom = true
+background = ${color.bg}
 foreground = ${colors.fg}
+border-size = 0
+padding-left = 2
+padding-right = 2
+module-margin = 1
 
 font-0 = "JetBrains Mono Nerd Font:style=Medium:size=10;2"
 font-1 = "JetBrains Mono Nerd Font:style=Bold:size=10;2"
 font-2 = "JetBrainsMono Nerd Font:size=19;5"
-font-3 = "Material Icons Outlined:9;4"
-font-4 = "Material Icons Round:9;4"
-font-5 = "Source Han Sans CN:size=9;2"
+font-3 = "Material Icons Outlined:10;4"
+font-4 = "Material Icons Round:10;4"
+font-5 = "Source Han Sans CN:size=10;2"
+font-6 = "Font Awesome:size=10;2"
 
-modules-left = bspwm 
-modules-right = date wlan pulseaudio battery margin
-#session
+
+modules-center = bspwm
+
+[bar/main]
+width = 96%
+offset-x = 36
+offset-y = 10
+height = 32
+radius = 8
+
+bottom = false
+background = ${colors.bg}
+foreground = ${colors.fg}
+border-size = 0
+padding-left = 2
+padding-right = 2
+module-margin = 1
+
+
+font-0 = JetBrainsMonoNL Nerd Font:size=9;3
 
 cursor-click = pointer
 
-[bar/external]
-monitor = HDMI1
-modules-right = wlan pulseaudio battery 
-#margin session
-inherit = bar/main
+enable-ipc = true
 
-[settings]
-screenchange-reload = true
+wm-restack = bspwm
 
-[module/battery]
-type = internal/battery
-battery = BAT0
-adapter = ADP1
-full-at = 98
 
-format-charging = <animation-charging> <label-charging>
-#label-charging = Charging %percentage%%
-format-charging-padding = 1
-format-charging-foreground = ${colors.foreground}
-
-format-discharging = <ramp-capacity> <label-discharging>
-#label-discharging = Discharging %percentage%%
-format-discharging-foreground = ${colors.foreground}
-
-label-full = Fully charged
-label-low = BATTERY LOW
-format-full-prefix =   <label-full>
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-
-ramp-capacity-0-foreground = ${colors.red}
-animation-charging-framerate = 910
-format-discharging-padding = 1
+modules-left = bspwm 
+modules-center = spotify spotify-prev spotify-play-pause spotify-next
+modules-right = date pulseaudio temperature memory backlight battery
 
 [module/bspwm]
 type = internal/bspwm
@@ -107,123 +76,149 @@ label-empty = %index%
 label-empty-foreground = ${colors.shade-1}
 label-empty-padding = 2
 
-[module/date]
-type = internal/date
+[module/xwindow]
+type = internal/xwindow
+label = %title:0:30:...% 
+
+[module/spotify]
+type = custom/script
+tail = true
 interval = 1
-
-time = "%a, %b %d %H:%M"
-
+; prefix symbol is shown before the text
+format-prefix = ""
 format = <label>
-format-foreground = ${colors.fg}
-format-padding = 1
-format-prefix = %{T5}%{T-}
-label = %{T1}%time%%{T-}
-label-padding = 1
+exec = ~/.config/polybar/spotify/scroll_spotify_status.sh
 
-[module/margin]
-type = custom/text
+[module/spotify-prev]
+type = custom/script
+exec = echo "󰼨"
+format = <label>
+click-left = playerctl previous -p spotify
 
-content = %{T2}%{T-}
-content-foreground = ${colors.trans}
+[module/spotify-play-pause]
+type = custom/ipc
+hook-0 = echo "||"
+hook-1 = echo ""
+initial = 1
+click-left = playerctl play-pause -p spotify
+
+[module/spotify-next]
+type = custom/script
+exec = echo "󰼧"
+format = <label>
+click-left = playerctl next -p spotify
 
 [module/pulseaudio]
 type = internal/pulseaudio
-use-ui-max = false
 
-format-volume =  <label-volume>
-format-volume-padding = 1
-format-volume-prefix = %{T4}%{T-}
-format-volume-prefix-foreground = ${colors.fg}
-label-volume = %{T1}%percentage%%%{T-}
-label-volume-foreground = ${colors.fg}
-label-volume-padding = 1
+use-ui-max = true
 
-format-muted =  <label-muted>
-format-muted-padding = 1
-format-muted-prefix = 
-format-muted-prefix-foreground = ${colors.fg-alt}
-label-muted = %{T1}%percentage%%%{T-}
-label-muted-foreground = ${colors.fg-alt}
-label-muted-padding = 1
+interval = 5
+format-volume = <ramp-volume> <label-volume>
+label-muted = 󰖁 muted
+label-muted-foreground = #666
+ramp-volume-0 = 
+ramp-volume-1 = 󰕾
+ramp-volume-2 = 
+click-right = pavucontrol
 
-click-right = pavucontrol&
 
-[module/session]
-type = custom/text
+[module/backlight]
+type = internal/backlight
+card = intel_backlight
+use-actual-brightness = true
+enable-scroll = true
+format = <label>
+label =  %percentage%%
 
-click-left = powermenu
-content = %{T4}%{T-}
-content-background = ${colors.shade-2}
-content-foreground = ${colors.shade-5}
-content-padding = 1
+[module/battery]
+type = internal/battery
 
-[module/wlan]
-type = internal/network
-interface = wlan0
+full-at = 99
+low-at = 5
+
+battery = BAT0
+adapter = ADP1
+
+poll-interval = 5
+time-format = %H:%M
+format-charging = <animation-charging> <label-charging>
+format-discharging = <ramp-capacity> <label-discharging>
+label-charging = Charging %percentage%%
+label-discharging = %percentage%%
+label-full = Fully charged
+label-low = BATTERY LOW
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+bar-capacity-width = 10
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-framerate = 750
+animation-discharging-0 = 
+animation-discharging-1 = 
+animation-discharging-2 = 
+animation-discharging-3 = 
+animation-discharging-4 = 
+animation-discharging-framerate = 500
+animation-low-0 = !
+animation-low-1 = 
+animation-low-framerate = 200
+
+
+[module/date]
+type = internal/date
+
 interval = 1.0
 
-format-connected = <label-connected>
-format-connected-padding = 1
-label-connected = %{A1:wifimenu:}%sessid%%{A}
-label-connected-foreground = ${colors.fg}
-label-connected-padding = 1
+date = %A, %Y-%m-%d%
 
-format-disconnected = <label-disconnected>
-format-disconnected-padding = 1
-label-disconnected = %{A1:wifimenu:}%{A}
-label-disconnected-foreground = ${colors.shade-1}
-label-disconnected-padding = 1
+; Optional time format
+time = %H:%M:%S
 
-[module/cpu]
-type = internal/cpu
-interval = 0.5
+; date-alt = %A, %d %B %Y
+; time-alt = %H:%M:%S
+format = 🕓 <label>
+
+label =  %date% 󱑎 %time%
+
+[module/memory]
+type = internal/memory
+
+interval = 3
+
 warn-percentage = 95
-format = <label> 
-label = CPU %percentage%%
-label-warn = CPU %percentage%%
+format = <label>
+label = 󰍛 %gb_used%/%gb_free%
+label-warn = %gb_used%/%gb_free%
+bar-used-indicator =
+bar-used-width = 50
+bar-used-foreground-0 = #55aa55
+bar-used-foreground-1 = #557755
+bar-used-foreground-2 = #f5a70a
+bar-used-foreground-3 = #ff5555
+bar-used-fill = ▐
+bar-used-empty = ▐
+bar-used-empty-foreground = #444444
 
-[module/network]
-type = internal/network
-; Name of the network interface to display. You can get the names of the
-; interfaces on your machine with `ip link`
-; Wireless interfaces often start with `wl` and ethernet interface with `eno` or `eth`
-interface = wlan1
-
-; If no interface is specified, polybar can detect an interface of the given type.
-; If multiple are found, it will prefer running interfaces and otherwise just
-; use the first one found.
-; Either 'wired' or 'wireless'
-; New in version 3.6.0
-interface-type = wireless
-
-; Seconds to sleep between updates
-; Default: 1
-interval = 3.0
-
-; Test connectivity every Nth update
-; A value of 0 disables the feature
-; NOTE: Experimental (needs more testing)
-; Default: 0
-;ping-interval = 3
-
-; @deprecated: Define min width using token specifiers (%downspeed:min% and %upspeed:min%)
-; Minimum output width of upload/download rate
-; Default: 3
-udspeed-minwidth = 5
-
-; Accumulate values from all interfaces
-; when querying for up/downspeed rate
-; Default: false
-accumulate-stats = true
-
-; Consider an `UNKNOWN` interface state as up.
-; Some devices like USB network adapters have 
-; an unknown state, even when they're running
-; Default: false
-unknown-as-up = true
-
-; The unit used for displaying network speeds
-; For example if set to the empty string, a speed of 5 KB/s is displayed as 5 K
-; Default: B/s
-; New in version 3.6.0
-speed-unit = ''
+[module/temperature]
+type = internal/temperature
+interval = 0.5
+thermal-zone = 0
+hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon6/temp1_input
+base-temperature = 20
+warn-temperature = 60
+units = false
+format-warn = <ramp> <label-warn>
+label = %temperature-c%°C
+label-warn = TEMP!! %temperature-c%°C
+label-warn-foreground = #f00
+ramp-0 = A
+ramp-1 = B
+ramp-2 = C
+ramp-foreground = #55
