--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,11 +1,54 @@
-include other.conf
-include gruvbox_dark_soft.conf
+# include other.conf
+# include gruvbox_dark_soft.conf
 # Include *.conf files from all subdirs of kitty.d inside the kitty config dir
-globinclude kitty.d/**/*.conf
+# globinclude kitty.d/**/*.conf
 # Include the *contents* of all env vars starting with KITTY_CONF_
 
 envinclude KITTY_CONF_*
+foreground            #f8f8f2
+background            #282a36
+selection_foreground  #ffffff
+selection_background  #44475a
+
+url_color #8be9fd
+
+# black
+color0  #21222c
+color8  #6272a4
+
+# red
+color1  #ff5555
+color9  #ff6e6e
+
+# green
+color2  #50fa7b
+color10 #69ff94
+
+# yellow
+color3  #f1fa8c
+color11 #ffffa5
+
+# blue
+color4  #bd93f9
+color12 #d6acff
+
+# magenta
+color5  #ff79c6
+color13 #ff92df
+
+# cyan
+color6  #8be9fd
+color14 #a4ffff
+
+# white
+color7  #f8f8f2
+color15 #ffffff
+
+font_family		 iosevka medium 
+bold_font        iosevka bold
+italic_font      iosevka italic
+bold_italic_font iosevka bolditalic
 font_size 13.0
 enable_audio_bell no
-background_opacity 0.7
+background_opacity 0.1
 
