changes to picom

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -209,14 +209,14 @@ opacity-rule = [
   "100:class_g    = 'kitty'",
   #"60:class_g    = 'eww-player'",
   "100:class_g    = 'Tint2'",
-  "80:class_g     =  'Polybar'"
-  #"80:class_g     = 'Polybar'",
+  "80:class_g     =  'Polybar'",
+  # "80:class_g     = 'Polybar'",
   #"100:class_g    = 'code-oss'",
   #"100:class_g    = 'Meld'",
   #"70:class_g     = 'TelegramDesktop'",
   #"90:class_g     = 'Joplin'",
   #"100:class_g    = 'firefox'",
-  #"80:class_g    = 'Spotify'"
+  "80:class_g    = 'Spotify'"
 ];
 
 
