--- a/spicetify/config-xpui.ini
+++ b/spicetify/config-xpui.ini
@@ -1,7 +1,7 @@
 [Setting]
 replace_colors          = 1
 spotify_launch_flags    = 
-current_theme           = Sleek
+current_theme           = Blossom
 prefs_path              = /home/aaditya/.config/spotify/prefs
 color_scheme            = UltraBlack
 inject_css              = 1
