--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -14,7 +14,7 @@ rounded-corners-exclude = [
   #"name = 'Notification area'",
   #"class_g = 'kitty'",
   #"class_g = 'Alacritty'",
-  #"class_g = 'Polybar'",
+  "class_g = 'Polybar'",
   #"class_g = 'code-oss'",
   #"class_g = 'firefox'",
   #"class_g = 'Thunderbird'",
