added rofi theme

--- a/cava/config
+++ b/cava/config
@@ -1,5 +1,5 @@
 ## Configuration file for CAVA. Default values are commented out. Use either ';' or '#' for commenting.
-
+## You can add different
 
 [general]
 
