--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -56,7 +56,7 @@ wm-restack = bspwm
 
 
 modules-left = bspwm 
-modules-center = spotify spotify-prev spotify-play-pause spotify-next
+modules-center = spotify
 modules-right = date pulseaudio temperature memory backlight battery
 
 [module/bspwm]
