changes to spotify

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -54,9 +54,8 @@ enable-ipc = true
 
 wm-restack = bspwm
 
-
 modules-left = bspwm 
-modules-center = spotify
+modules-center = spotify spotify-prev spotify-play-paue spotify-next
 modules-right = date pulseaudio temperature memory backlight battery
 
 [module/bspwm]
