--- a/spotifyd/spotifyd.conf
+++ b/spotifyd/spotifyd.conf
@@ -65,7 +65,7 @@ volume_controller = "alsa"  # use softvol for macOS
 
 # The name that gets displayed under the connect tab on
 # official clients. Spaces are not allowed!
-device_name = "aaditya"
+device_name = ""
 
 # The audio bitrate. 96, 160 or 320 kbit/s
 bitrate = 160
